[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyml-parser"
version = "0.1.0"
description = "A simple parser for NYML configuration format"
authors = [
    {name = "NYML Team", email = "example@example.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nyml_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]